# insaniquarium-mac

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  VERSIONS  setup.sh
PvZ-Portable/: CMakeLists.txt  README.md
PvZ-Portable/scripts/: create_flat_directory.sh
PvZ-Portable/src/SexyAppFramework/: SexyAppBase.cpp
PvZ-Portable/src/SexyAppFramework/graphics/: GLInterface.cpp  GLInterface.h  GLPlatform.h
PvZ-Portable/src/SexyAppFramework/misc/: ResourceManager.cpp
PvZ-Portable/src/SexyAppFramework/platform/default/: Input.cpp  Window.cpp
WinFish/: .gitignore  README.md
WinFish/source/: SexyAppFramework
WinFish/source/WinFish/: BetaSupport.cpp  BetaSupport.h  Bilaterus.cpp  Board.cpp  BonusScreen.cpp  ContinueDialog.h  DataSync.cpp  DataSync.h  Fish.cpp  FishSongMgr.cpp  FishSongMgr.h  GameObject.cpp  GameObject.h  GameSelector.cpp  GameSelector.h  HelpScreen.cpp  HelpScreen.h  HighScoreScreen.cpp  InternetManager.cpp  InternetManager.h  Missle.cpp  MoneyDialog.h  NewUserDialog.h  OptionsDialog.cpp  OptionsDialog.h  PetDialog.h  PetsScreen.cpp  ProfileMgr.cpp  RegisterDialog.h  Res.cpp  Res.h  ScreenSaverDialog.h  SexyApp.cpp  SexyApp.h  StarField.cpp  StarField.h  SteamPresence.cpp  SteamPresence.h  StoreScreen.cpp  TitleScreen.cpp  (+14 more)
packaging/: Info.plist  Insaniquarium.icns
saver/: Info.plist  InsaniquariumSaverView.mm  SaverHost.mm
scripts/: make-dist.sh  make-icns.sh  package-saver.sh  package.sh  release.sh  steam-shortcut.py
scripts/steam-play-button/: com.jake.insaniquarium.steampatch.plist  edit_appinfo.py  in-app-update.sh  inject.sh  install-durability.sh  reapply.sh  revert.sh  run.sh  uninstall.sh  update.sh
scripts/steam-play-button/sme/: NOTICE
spike/: main.cpp
